@@ -25,7 +25,7 @@
             "iconUrl": "https://raw.githubusercontent.com/tonesto7/echo-speaks/master/resources/icons/echo_speaks.1x.png",
             "published": true,
             "oAuth": true,
-            "version": "3.0.1.5",
+            "version": "3.1.0.0",
             "appSettings": {},
             "appUrl": "smartapps/tonesto7/echo-speaks.src/echo-speaks.groovy"
         },
@@ -34,7 +34,7 @@
             "iconUrl": "https://raw.githubusercontent.com/tonesto7/echo-speaks/master/resources/icons/es_actions.png",
             "published": true,
             "oAuth": false,
-            "version": "3.0.1.2",
+            "version": "3.1.0.0",
             "appSettings": {},
             "appUrl": "smartapps/tonesto7/echo-speaks-actions.src/echo-speaks-actions.groovy"
         }]
@@ -43,7 +43,7 @@
         "name": "Echo Speaks Device",
         "iconUrl": "https://raw.githubusercontent.com/tonesto7/echo-speaks/master/resources/icons/echo_dot_gen1.png",
         "published": true,
-        "version": "3.0.1.2",
+        "version": "3.1.0.0",
         "appUrl": "deviceTypes/tonesto7/echo-speaks-device.src/echo-speaks-device.groovy",
         "optional": false
     }]
