@@ -1,63 +1,0 @@
-{
-    "3.0.0": {
-        "Main App": {
-            "date": "August 27th, 2019",
-            "NEW": [
-                "Automation child app called Echo Speaks - Actions",
-                "Support/automation for Alexa Guard (Please note.  If you have a large quantity of smart home devices attached to alexa this will prevent guard data from being loaded under ST).",
-                "Option to remove 'Echo - ' prefix from device names.",
-                "Issues section at top of the app UI.  It will show any authentication, code updates/version issues.",
-                "Child App and Devices now verify that they meet the minimum version required and stop processing if they don't.",
-                "updated the announcement tests.",
-                "importUrl header param added for Hubitat users to quickly import code",
-                "Checks are now made to make sure you can't install Actions app from the marketplace.",
-                "Log filtering options to reducing log output.",
-                "three strikes rule for authentication failures. Instead of clearing auth on the first failed attempt it will wait for 3 consectutive failures."
-            ],
-            "FIXED": [
-                "Repaired issue with Bluetooth status requests.",
-                "Alexa device rename issue on Hubitat",
-                "Other bugs resolved."
-            ],
-            "UPDATED": [
-                "Streamlined the mainPage to be less overwhelming."
-            ]
-        },
-        "Actions App": {
-            "date": "August 27th, 2019",
-            "NEW": [
-                "importUrl param for Hubitat users to quickly import",
-                "Alexa Routine Execution (Only those with custom voice triggers)",
-                "Subscribe to just about any location and device events",
-                "Create responses for each trigger type (Means 1 action can accomodate a large number of events).",
-                "Monitor devices for changes and speak after so many seconds then repeat every x seconds until it changes to desired state.",
-                "Define different responses for the repeat events.",
-                "Define multiple responses and have a random response for each event.",
-                "Web Based reponse builder.",
-                "Log filtering options to reducing log output.",
-                "Much more."
-            ],
-            "FIXED": [],
-            "UPDATED": []
-        },
-        "Device": {
-            "date": "August 27th, 2019",
-            "NEW": [
-                "importUrl param for Hubitat users to quickly import code",
-                "SSML Support for Speech commands.",
-                "Better version checks for devices to prevent compatibility issues.",
-                "alexaGuardStatus attribute",
-                "Log filtering options to reducing log output."
-            ],
-            "FIXED": [
-                "All web calls have been reworked to eliminate the JSON error in the logs.",
-                "setLevel type mismatch issues.",
-                "Extensive queue testing and optimizations.",
-                "Other stuff i'm not remembering"
-            ],
-            "UPDATED": [
-                "Tweaked and optimized the Queue system in the device to be much more resilient and reliable."
-            ]
-        }
-    }
-}
